--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header_pages:
   - about.md
   - research.md 
   - cv.md
-  - news & publications.md
+  - publications.md
 
 
 twitter_username: yanjus4christ
