--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,7 @@ header_pages:
 twitter_username: yanjus4christ
 linkedin_username: samueladeyanju
 email: samuel.adeyanju@ubc.ca
+
+plugins:
+  - jekyll-pdf-embed
+  
