--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ header_pages:
 
 twitter_username: yanjus4christ
 linkedin_username: samueladeyanju
-email: samuel.adeyanju@ubc.ca
+email: adesam1@student.ubc.ca
 
 
 plugins: ['jekyll-twitter-plugin']
